# timeseries_server

./: LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml
timeseries_server/: main.py  timeseries_client.py
