[tool.poetry]
name = "timeseries_server"
version = "0.1.0"
description = "timeseries target server, detector framework, and notification publishing"
authors = ["James Delancey <jamesdelanceyjr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
bottle = "^0.12.19"
dateparser = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
